pkg/lang/testdata/ub/config/invalid/input-resource-reference.ub
inputs: { x: resource.a.b.c }
